--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scatter",
-  "version": "9.5.0",
+  "version": "9.5.0-encryption",
   "description": "Scatter Desktop Companion",
   "private": true,
   "main": "electron.js",
